--- a/assets/scss/_home.scss
+++ b/assets/scss/_home.scss
@@ -204,6 +204,10 @@
             height: 43px;
             left: 160px;
             bottom: 150px;
+            &:hover{
+                background-color: rgb(143, 1, 1);
+                transition: 0.5s;
+            }
         }
 
     }
@@ -340,10 +344,15 @@
                 margin-left: 167px;
             }
         }
-
-
-
     }
+    .show-more{
+        text-align: center;
+        margin-top: 30px;
+        button{
+            width: 150px;
+        }
+    }
+
 }
 
 #our-services {
@@ -353,7 +362,7 @@
 
         .background-image {
             height: 420px;
-            background-image: url(../images/home/our-service.jpg);
+            
 
             .icon {
                 text-align: center;
@@ -391,6 +400,13 @@
                     width: 200px;
                     background: none;
                     border: 1px solid white;
+                    &:hover{
+                        background-color: white;
+                        transition: 0.5s;
+                        p{
+                            color: #000;
+                        }
+                    }
 
                     p {
                         padding-top: 13px;
@@ -479,7 +495,6 @@
     margin-top: 150px;
 
     .autobiography1 {
-        background-image: url(../images/home/authobiography-backgorund.jpg);
         width: 100%;
         height: 500px;
         display: flex;
@@ -522,6 +537,13 @@
                     width: 200px;
                     background: none;
                     border: 1px solid black;
+                    &:hover{
+                        background-color: #282828;
+                        transition: 0.5s;
+                        p{
+                            color: white;
+                        }
+                    }
 
                     p {
                         padding-top: 13px;
@@ -541,7 +563,6 @@
         }
 
         .right {
-            background-image: url(../images/home/zerler.png);
             width: 200px;
             height: 100%;
 
@@ -581,7 +602,7 @@
                 display: flex;
 
                 .backgorund-image {
-                    background-image: url(../images/home/background-image-2.png);
+                    
                     width: 200px;
                     height: 500px;
                 }
@@ -649,6 +670,13 @@
                     width: 200px;
                     background: none;
                     border: 1px solid black;
+                    &:hover{
+                        background-color:#282828 ;
+                        transition: 0.5s;
+                        p{
+                            color: white;
+                        }
+                    }
 
                     p {
                         padding-top: 13px;
@@ -673,113 +701,156 @@
     margin-top: 200px;
 
     .image1 {
+        overflow: hidden;
         img {
             width: 100%;
+            &:hover{
+                transform:scale(1.1);
+                transition: 0.5s;
+            }
         }
     }
 
     .image2 {
-
+        overflow: hidden;
         img {
             width: 100%;
+            &:hover{
+                transform:scale(1.1);
+                transition: 0.5s;
+            }
         }
 
     }
 
     .image3 {
-
+        overflow: hidden;
         img {
             width: 100%;
             margin-top: 23px;
+            &:hover{
+                transform:scale(1.1);
+                transition: 0.5s;
+            }
         }
 
     }
 
     .image4 {
         margin-top: 20px;
-
+        overflow: hidden;
         img {
             width: 100%;
-
+            &:hover{
+                transform:scale(1.1);
+                transition: 0.5s;
+            }
         }
 
     }
 
     .image5 {
         margin-top: 20px;
-
+        overflow: hidden;
         img {
             width: 100%;
-
+            &:hover{
+                transform:scale(1.1);
+                transition: 0.5s;
+            }
         }
 
     }
 
     .image6 {
         margin-top: 26px;
-
+        overflow: hidden;
         img {
             width: 100%;
-
+            &:hover{
+                transform:scale(1.1);
+                transition: 0.5s;
+            }
         }
 
     }
 
     .image7 {
+        overflow: hidden;
         img {
             width: 100%;
-
+            &:hover{
+                transform:scale(1.1);
+                transition: 0.5s;
+            }
         }
 
     }
 
     .image8 {
         margin-top: 17px;
-
+        overflow: hidden;
         img {
             width: 100%;
-
+            &:hover{
+                transform:scale(1.1);
+                transition: 0.5s;
+            }
         }
 
     }
 
     .image9 {
         margin-top: 26px;
-
+        overflow: hidden;
         img {
             width: 100%;
-
+            &:hover{
+                transform:scale(1.1);
+                transition: 0.5s;
+            }
         }
 
     }
 
     .image10 {
         margin-top: 26px;
-
+        overflow: hidden;
         img {
             width: 100%;
-
+            &:hover{
+                transform:scale(1.1);
+                transition: 0.5s;
+            }
         }
 
     }
 
     .image11 {
-
+        overflow: hidden;
         img {
             width: 100%;
-
+            &:hover{
+                transform:scale(1.1);
+                transition: 0.5s;
+            }
         }
 
     }
 
     .image12 {
+        overflow: hidden;
         margin-top: 18px;
+        img {
+            width: 100%;
+            &:hover{
+                transform:scale(1.1);
+                transition: 0.5s;
+            }
+        }
     }
 
-    img {
-        width: 100%;
-
-    }
+   
 
 }
 
@@ -817,7 +888,7 @@
             p {
                 cursor: pointer;
                 color: rgb(153, 153, 153);
-                
+
                 &:hover {
                     color: white;
                     transition: 0.5s;
@@ -885,16 +956,18 @@
                 }
             }
         }
-        .email-input{
-            input{
-                background-color:#282828 ;
-                border: 1px solid rgb(153, 153, 153) ;
+
+        .email-input {
+            input {
+                background-color: #282828;
+                border: 1px solid rgb(153, 153, 153);
                 width: 260px;
                 height: 50px;
             }
         }
 
     }
+
     .right {
         margin-top: 80px;
 
@@ -905,9 +978,25 @@
         .story {
             margin-top: 40px;
 
-            
+            .images1 {
+                display: flex;
+                gap: 10px;
+
+                img {
+                    width: 100%;
+                }
+            }
+            .images2 {
+                display: flex;
+                gap: 10px;
+                margin-top: 10px;
+                img {
+                    width: 100%;
+                }
+            }
+
         }
-       
+
 
     }
 }
