--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,1 +1,9 @@
 @import './home';
+@import './about';
+@import './blog';
+@import './contact';
+@import './shop';
+@import './cart';
+@import './wishlist';
+@import './login';
+@import './register';
