--- a/assets/scss/_home.scss
+++ b/assets/scss/_home.scss
@@ -266,11 +266,17 @@
 
 #products {
     margin-top: 150px;
-
-    .filterDiv {}
-
-    .show {
-        display: block;
+    .container{
+        .row{
+            .filterDiv {
+                display: none ;
+            }
+            
+            .show {
+                display: block;
+            }
+         
+        }
     }
 
     .category {
@@ -279,6 +285,11 @@
             gap: 10px;
             justify-content: center;
 
+            .active{
+                transition: 1s;
+                background-color: #198754;
+                
+            }
             li {
                 list-style: none;
                 border: 1px solid black;
@@ -286,10 +297,10 @@
                 text-align: center;
                 height: 40px;
                 padding-top: 7px;
-
+                cursor: pointer;
                 a {
                     text-decoration: none;
-                    color: #000;
+                    color: black;
                 }
             }
         }
@@ -390,7 +401,7 @@
                 margin-top: 10px;
                 font-family: monospace;
 
-                p {}
+                // p {}
             }
 
             .description {
