Add New Section

--- a/assets/scss/_home.scss
+++ b/assets/scss/_home.scss
@@ -502,6 +502,7 @@
 
                 p {
                     width: 250px;
+                    text-align: center;
                 }
 
             }
