--- a/assets/scss/_login.scss
+++ b/assets/scss/_login.scss
@@ -144,10 +144,118 @@
     }
 }
 
+#background {
+    .background-images {
+        height: 300px;
+        background-size: cover;
+        background-position: center;
 
+        h2 {
+            text-align: center;
+            color: white;
+            padding-top: 120px;
+            font-family: monospace;
+        }
+    }
+
+}
+
+#login-form {
+    margin-top: 100px;
+
+    .login {
+        h2 {
+            font-family: monospace;
+        }
+    }
+
+    .username-label {
+        margin-top: 30px;
+
+        label {
+            color: gray;
+        }
+    }
+
+    .username-input {
+        margin-top: 10px;
+
+        input {
+            width: 100%;
+            height: 50px;
+            border: 1px solid gray;
+            outline: none;
+        }
+    }
+
+    .password-label {
+        margin-top: 30px;
+
+        label {
+            color: gray;
+        }
+    }
+
+    .password-input {
+        margin-top: 10px;
+
+        input {
+            width: 100%;
+            height: 50px;
+            border: 1px solid gray;
+            outline: none;
+        }
+    }
+
+    .remenber-login {
+        display: flex;
+
+        .form-check {
+            margin-top: 33px;
+        }
+        .login-button{
+            margin-left: 50px;
+            margin-top: 20px;
+            button{
+                width: 130px;
+                height: 50px;
+                background-color: rgb(241, 6, 6);
+                color: white;
+                &:hover{
+                    background-color:rgb(172, 2, 2) ;
+                    transition: 0.5s;
+                }
+            }
+        }
+    }
+    .forgot-password{
+        margin-top: 10px;
+        a{
+            text-decoration: none;
+            color: black;
+        }
+    }
+    .account{
+        display: flex;
+        margin-top: 10px;
+        .dont-account{
+            p{
+                font-weight: bold;
+            }
+        }
+        .register{
+            a{
+                text-decoration: none;
+                color:rgb(241, 6, 6) ;
+                font-weight: bold;
+            }
+        }
+    }
+
+}
 
 #footer {
-    
+
     background-color: #282828;
     width: 100%;
     height: 450px;
@@ -293,21 +401,4 @@
             }
         }
     }
-}
-
-
-.divider:after,
-.divider:before {
-content: "";
-flex: 1;
-height: 1px;
-background: #eee;
-}
-.h-custom {
-height: calc(100% - 73px);
-}
-@media (max-width: 450px) {
-.h-custom {
-height: 100%;
-}
 }
