--- a/assets/scss/style.css
+++ b/assets/scss/style.css
@@ -391,6 +391,7 @@
 }
 #authors .authors .author .author-description p {
   width: 250px;
+  text-align: center;
 }
 
 #autobiography1 {
@@ -1628,6 +1629,80 @@
   margin-top: 13px;
 }
 
+#map {
+  margin-top: 73px;
+}
+#map iframe {
+  width: 100%;
+}
+
+#contact {
+  margin-top: 100px;
+  margin-left: 70px;
+}
+#contact .name h4 {
+  font-family: initial;
+}
+#contact .location {
+  margin-top: 30px;
+  display: flex;
+  cursor: pointer;
+}
+#contact .location .address {
+  margin-left: 10px;
+}
+#contact .location .address p {
+  font-family: monospace;
+  color: gray;
+}
+#contact .location:hover p {
+  color: red;
+  transition: 0.5s;
+}
+#contact .phone {
+  display: flex;
+  cursor: pointer;
+}
+#contact .phone .number {
+  margin-left: 10px;
+}
+#contact .phone .number p {
+  font-family: monospace;
+  color: gray;
+}
+#contact .phone:hover p {
+  color: red;
+  transition: 0.5s;
+}
+#contact .message {
+  display: flex;
+  cursor: pointer;
+}
+#contact .message .mail {
+  margin-left: 10px;
+}
+#contact .message .mail p {
+  font-family: monospace;
+  color: gray;
+}
+#contact .message:hover p {
+  color: red;
+  transition: 0.5s;
+}
+
+#brand {
+  margin-top: 150px;
+}
+#brand img {
+  width: 100%;
+  height: 170px;
+  cursor: pointer;
+}
+#brand img:hover {
+  margin-top: -20px;
+  transition: 0.5s;
+}
+
 #footer {
   margin-top: 150px;
   background-color: #282828;
@@ -2516,6 +2591,94 @@
   margin-top: 13px;
 }
 
+#background .background-images {
+  height: 300px;
+  background-size: cover;
+  background-position: center;
+}
+#background .background-images h2 {
+  text-align: center;
+  color: white;
+  padding-top: 120px;
+  font-family: monospace;
+}
+
+#login-form {
+  margin-top: 100px;
+}
+#login-form .login h2 {
+  font-family: monospace;
+}
+#login-form .username-label {
+  margin-top: 30px;
+}
+#login-form .username-label label {
+  color: gray;
+}
+#login-form .username-input {
+  margin-top: 10px;
+}
+#login-form .username-input input {
+  width: 100%;
+  height: 50px;
+  border: 1px solid gray;
+  outline: none;
+}
+#login-form .password-label {
+  margin-top: 30px;
+}
+#login-form .password-label label {
+  color: gray;
+}
+#login-form .password-input {
+  margin-top: 10px;
+}
+#login-form .password-input input {
+  width: 100%;
+  height: 50px;
+  border: 1px solid gray;
+  outline: none;
+}
+#login-form .remenber-login {
+  display: flex;
+}
+#login-form .remenber-login .form-check {
+  margin-top: 33px;
+}
+#login-form .remenber-login .login-button {
+  margin-left: 50px;
+  margin-top: 20px;
+}
+#login-form .remenber-login .login-button button {
+  width: 130px;
+  height: 50px;
+  background-color: rgb(241, 6, 6);
+  color: white;
+}
+#login-form .remenber-login .login-button button:hover {
+  background-color: rgb(172, 2, 2);
+  transition: 0.5s;
+}
+#login-form .forgot-password {
+  margin-top: 10px;
+}
+#login-form .forgot-password a {
+  text-decoration: none;
+  color: black;
+}
+#login-form .account {
+  display: flex;
+  margin-top: 10px;
+}
+#login-form .account .dont-account p {
+  font-weight: bold;
+}
+#login-form .account .register a {
+  text-decoration: none;
+  color: rgb(241, 6, 6);
+  font-weight: bold;
+}
+
 #footer {
   background-color: #282828;
   width: 100%;
@@ -2623,23 +2786,6 @@
   font-size: 23px;
 }
 
-.divider:after,
-.divider:before {
-  content: "";
-  flex: 1;
-  height: 1px;
-  background: #eee;
-}
-
-.h-custom {
-  height: calc(100% - 73px);
-}
-
-@media (max-width: 450px) {
-  .h-custom {
-    height: 100%;
-  }
-}
 #navbar .logo-pages {
   display: flex;
 }
